--- a/spacematters.bib
+++ b/spacematters.bib
@@ -11,6 +11,28 @@
 }
 
 
+@article{smith2002predicting,
+  title={Predicting the spatial dynamics of rabies epidemics on heterogeneous landscapes},
+  author={Smith, David L and Lucey, Brendan and Waller, Lance A and Childs, James E and Real, Leslie A},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={6},
+  pages={3668--3672},
+  year={2002},
+  publisher={National Acad Sciences}
+}
+
+@article{smith2002predicting,
+  title={Predicting the spatial dynamics of rabies epidemics on heterogeneous landscapes},
+  author={Smith, David L and Lucey, Brendan and Waller, Lance A and Childs, James E and Real, Leslie A},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={6},
+  pages={3668--3672},
+  year={2002},
+  publisher={National Acad Sciences}
+}
+
 
 @article{AllenSanglier1979,
 	title = {A dynamic model of growth in a central place system},
